2004-12-12  graydon hoare  <graydon@pobox.com>

	* commands.cc: Fix bug reported in t_attr.at
	* tests/t_attr.at: Remove xfail.
	* change_set.cc: Change unit tests syntax.
	(read_change_set): Assert complete read.
	* revision_ser.cc (read_revision_set): Likewise.
	* os_specific.hh: Drop obsolete file.

2004-12-12  Joel Rosdahl  <joel@rosdahl.net>

	* revision.cc (find_least_common_ancestor): New function for
	finding the vanilla LCA.
	* revision.hh: Added prototype for find_least_common_ancestor.
	* commands.cc (update): Use find_least_common_ancestor for finding
	a common ancestor.
	* commands.cc (diff): Likewise.
	* revision.cc (find_common_ancestor): Rename to...
	(find_common_ancestor_for_merge): ...this, for clarity.
	* revision.hh: find_common_ancestor -->
	find_common_ancestor_for_merge.
	* commands.cc (try_one_merge): Call find_common_ancestor_for_merge
	to find ancestor.
	* commands.cc (lcad): Rename lca command to lcad.
	* commands.cc (lca): New command for finding the vanilla LCA.

2004-12-12  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_persistent_server_keys.at: Actually test what it's
	supposed to.  Also, un-XFAIL it, since now it seems to pass.
	
2004-12-12  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_persistent_server_keys.at: New test.

	* testsuite.at: Call it.
	* tests/t_persistent_server_revision.at: Fix typo.

2004-12-12  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_persistent_server_revision.at: New test.
	* testsuite.at: Call it.  Tweak NETSYNC macros in support of it.

2004-12-11  Nathaniel Smith  <njs@codesourcery.com>

	* lua.hh (add_rcfile): Add 'required' argument.
	* lua.cc (add_rcfile): Implement it.  Simplify error checking
	logic while I'm there...
	* monotone.cc (cpp_main): Pass new argument to add_rcfile.
	
	* tests/t_rcfile_required.at: New test.
	* testsuite.at: Call it.
	Revamp netsync support macros, to allow long-running servers.
	Make netsync-killer try first with -TERM, in case that plays nicer