@@ -1,3 +1,9 @@
+2004-12-13  Joel Rosdahl  <joel@rosdahl.net>
+
+	* revision.cc (find_least_common_ancestor): Remove unused variable.
+	* commands.cc (lca): Correct negative status text.
+	* commands.cc (update): Use GNU style braces.
+
 2004-12-12  graydon hoare  <graydon@pobox.com>
 
 	* commands.cc: Fix bug reported in t_attr.at
